// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems/Organisms/BlogPostFooter Show All 1`] = `
<div
  className="css-i3wwl2-styles-styles"
>
  <section
    className="share"
  >
    <h4>
      <span
        className="icon icon-brand-spiral"
      />
      <div>
        Share this 
        article
        :
      </div>
    </h4>
    <div
      className="socialIcons"
    >
      <div
        className="css-1564951-styles-styles"
      >
        <a
          href="https://www.linkedin.com/company/spiral-gives"
          onClick={[Function]}
          rel="noreferrer"
          target="_blank"
        >
          <span
            className="icon icon-brand-linkedin-thin"
          />
        </a>
        <a
          href="https://www.facebook.com/spiralgives"
          onClick={[Function]}
          rel="noreferrer"
          target="_blank"
        >
          <span
            className="icon icon-brand-facebook-thin"
          />
        </a>
        <a
          href="https://www.instagram.com/spiralgives"
          rel="noreferrer"
          target="_blank"
        >
          <span
            className="icon icon-brand-instagram-thin"
          />
        </a>
        <a
          href="https://twitter.com/Spiralgives"
          onClick={[Function]}
          rel="noreferrer"
          target="_blank"
        >
          <span
            className="icon icon-brand-twitter-thin"
          />
        </a>
      </div>
    </div>
  </section>
  <hr />
  <section
    className="email"
  >
    <h4>
      Enjoy more stories about using your money for good
    </h4>
  </section>
</div>
`;

exports[`Storyshots Design Systems/Organisms/BlogPostFooter Show Only Social 1`] = `
<div
  className="css-i3wwl2-styles-styles"
>
  <section
    className="share"
  >
    <h4>
      <span
        className="icon icon-brand-spiral"
      />
      <div>
        Share this 
        article
        :
      </div>
    </h4>
    <div
      className="socialIcons"
    >
      <div
        className="css-1564951-styles-styles"
      >
        <a
          href="https://www.linkedin.com/company/spiral-gives"
          onClick={[Function]}
          rel="noreferrer"
          target="_blank"
        >
          <span
            className="icon icon-brand-linkedin-thin"
          />
        </a>
        <a
          href="https://www.facebook.com/spiralgives"
          onClick={[Function]}
          rel="noreferrer"
          target="_blank"
        >
          <span
            className="icon icon-brand-facebook-thin"
          />
        </a>
        <a
          href="https://www.instagram.com/spiralgives"
          rel="noreferrer"
          target="_blank"
        >
          <span
            className="icon icon-brand-instagram-thin"
          />
        </a>
        <a
          href="https://twitter.com/Spiralgives"
          onClick={[Function]}
          rel="noreferrer"
          target="_blank"
        >
          <span
            className="icon icon-brand-twitter-thin"
          />
        </a>
      </div>
    </div>
  </section>
</div>
`;
